--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "ls-r": "~0.2.1",
     "mkdirp": "~0.3.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tap": "~0.3.2",
+    "request": "~2.12.0"
+  },
   "scripts": {
     "start": "node ./bin/piston",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "bin": {
     "piston": "./bin/piston"
