--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "tap": "~0.3.2",
-    "request": "~2.12.0"
+    "request": "~2.12.0",
+    "async": "~0.1.22"
   },
   "scripts": {
     "start": "node ./bin/piston",
